# examtex

./: .gitignore  README.md  config.yml  pyproject.toml
examtex/: analyze.py  exam.py  util.py
scripts/: Normalize.py
templates/: exam.tex  question.tex
